<resources>
    <string name="app_name">MyExpense</string>
    <string name="usuario">Usuario:</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="senha">Senha:</string>
    <string name="entrar">ENTRAR</string>
    <string name="title_activity_principal">MyExpense</string>
    <string name="despesa">Despesas</string>
    <string name="receita">Receitas</string>
    <string name="imagem">Imagem</string>
    <string name="procurar_imagem">PROCURAR IMAGEM</string>
    <string name="nova_despesa">Nova Despesa</string>
    <string name="nova_receita">Nova Receita</string>
    <string name="novo_cadastro">Novo Cadastro</string>
    <string name="salvar">SALVAR</string>
    <string name="retiraDespesa">Deletar despesa</string>
    <string name="sim">SIM</string>
    <string name="nao">NAO</string>
</resources>
